--- a/src/css/style.css
+++ b/src/css/style.css
@@ -37,3 +37,18 @@ body{
     padding-bottom: 200px;
     background-color: #333;
 }
+button{
+    background-color: #333;
+    color: black;
+}
+.active{
+    background-color: aliceblue;
+    color: black;
+}
+.var-item{
+    padding: 10px;
+    list-style: none;
+    border: 2px solid #333;
+    border-radius: 20px;
+    margin-bottom: 10px;
+}
