--- a/src/css/style.css
+++ b/src/css/style.css
@@ -29,6 +29,7 @@ body{
     flex-direction: column;
     margin: 0 400px;
     align-items: center;
+    padding-bottom: 0;
 }
 
 .footer{
@@ -51,4 +52,14 @@ button{
     border: 2px solid #333;
     border-radius: 20px;
     margin-bottom: 10px;
+}
+.main-button{
+    display: flex;
+    justify-content: space-between;
+    margin:0 40px;
+    margin-bottom: 30px;
+}
+.p-main{
+    text-align: center;
+    margin-bottom: 70px;
 }
