--- a/src/css/style.css
+++ b/src/css/style.css
@@ -63,3 +63,8 @@ button{
     text-align: center;
     margin-bottom: 70px;
 }
+.timer{
+    border: 3px solid blanchedalmond;
+    text-align: center;
+    margin: 0 500px;
+}
