--- a/src/css/style.css
+++ b/src/css/style.css
@@ -13,6 +13,7 @@ body{
     padding: 10px;
     display: flex;
     justify-content: space-between;
+    position: relative;
 }
 .header img{
     width: 40px;
@@ -67,4 +68,10 @@ button{
     border: 3px solid blanchedalmond;
     text-align: center;
     margin: 0 500px;
+}
+.time-now{
+    position: absolute;
+    top: 20px;
+    left: 620px;
+
 }
