--- a/src/css/style.css
+++ b/src/css/style.css
@@ -75,3 +75,46 @@ button{
     left: 620px;
 
 }
+.counter_footer{
+   display: flex;
+   justify-content: center;
+   flex-direction: column; 
+   align-items: center;
+   margin-top: 30px;
+}
+
+.buttons-counter{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin: 10px 0 100px 0;
+    font-weight: 400;
+}
+.button_plus{
+    width: 50px;
+    height: 50px;
+    background-color: green;
+    font-size: 20px;
+    padding: auto;
+    
+}
+.button_minus{
+    width: 50px;
+    height: 50px;
+    background-color: red;
+    font-size: 20px;
+    padding: auto;
+}
+
+.counter_footer p{
+    margin: 20px 0;
+    font-size: 20px;
+    font-weight: 600;
+}
+.button_Kvadrat{
+    width: 50px;
+    height: 50px;
+    background-color: yellow;
+    font-size: 20px;
+    padding: auto;
+}
