--- a/src/css/style.css
+++ b/src/css/style.css
@@ -24,6 +24,12 @@ body{
 }
 
 .main{
+    
+    background-image: url('https://i.pinimg.com/originals/5e/f6/2c/5ef62cd908794f79f753ca01d964fc36.jpg');
+    background-size: 100%;
+    background-repeat: no-repeat;
+}
+.main-info{
     height: 700px;
     display: flex;
     justify-content: center;
@@ -31,8 +37,8 @@ body{
     margin: 0 400px;
     align-items: center;
     padding-bottom: 0;
+    color: black;
 }
-
 .footer{
     text-align: center;
     padding: 20px;
@@ -42,6 +48,8 @@ body{
 button{
     background-color: #333;
     color: black;
+    border-radius: 20px;
+    padding: 5px;
 }
 .active{
     background-color: aliceblue;
@@ -63,6 +71,7 @@ button{
 .p-main{
     text-align: center;
     margin-bottom: 70px;
+    margin-top: 50px;
 }
 .timer{
     border: 3px solid blanchedalmond;
@@ -72,7 +81,7 @@ button{
 .time-now{
     position: absolute;
     top: 20px;
-    left: 620px;
+    right: 862px;
 
 }
 .counter_footer{
@@ -117,4 +126,36 @@ button{
     background-color: yellow;
     font-size: 20px;
     padding: auto;
+}
+.modal-footer{
+    width: 400px;
+    height: 350px;
+    background-color: aliceblue;
+    border-radius: 40px;
+    position: absolute;
+    bottom: 100px;
+    background-color: bisque;
+    
+}
+.modal-footer img{
+    width: 400px;
+    height: 250px;
+    border-radius: 40px;
+    
+   
+}
+.modal-blog{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 50px;
+}
+.footer-sec{
+    position: relative;
+}
+.modal-footer button{
+    margin-left: 170px;
+    margin-top: 35px;
+    background-color: g;
 }
