--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,6 +7,7 @@
 body{
     background-color:  black;
     color: azure;
+    height: 1000px;
 }
 .header{
     background-color: #333;
@@ -159,3 +160,73 @@ button{
     margin-top: 35px;
     background-color: g;
 }
+
+@media(max-width:390px){
+    .header-button{
+        display: flex;
+        justify-content: end;
+        flex-wrap: nowrap;
+        gap: 5px;
+    }
+    .header-button button{
+        font-size: 5px;
+        padding: 5px;  
+    }
+    .time-now{
+        font-size: 8px;
+        right: 221px;
+        margin-top: 7px;
+    }
+    .header img {
+        margin-left: 5px;
+        width: 40px;
+        height: 40px;
+    }
+    
+    .main-info{
+        height: 250px;
+        font-size: 6px;
+        display: flex;
+        margin-top: 2px;
+        margin: 0;
+        flex-wrap: nowrap;
+        padding-bottom: 20px;
+    }
+    .main-button{
+        display: flex;
+        justify-content: space-between;
+        margin:0 10px ;
+        padding: 0;
+    }
+    .main-button p{
+        font-size: 6px;
+    }
+    .counter_footer {
+    margin-top: 20px;
+    }
+    .timer {
+     margin: 0 auto;
+     width: 300px;
+    }
+    .modal-footer{
+        width: 199px;
+        height: 151px;
+        background-color: aliceblue;
+        border-radius: 40px;
+        position: absolute;
+        bottom: 100px;
+        background-color: bisque;
+        align-items: center;
+    }
+    .modal-footer img{
+        width: 200px;
+        height: 120px;
+        border-radius: 40px;
+        
+       
+    }
+    .modal-footer button{
+        margin-left: 69px;
+        margin-top: -3px;
+    }
+    }
